Migrate to TypeScript and update OpenAI client usage
Refactored the GitHub Action to TypeScript, adding a `tsconfig.json` for strict type-checking and generating compiled outputs in the `dist` directory. Updated OpenAI client methods to the latest v4 syntax for compatibility and enhanced error handling. Added TypeScript-specific updates to describe function types and interfaces for clarity.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A GitHub Action that reviews PRs using OpenAI and posts feedback.",
   "main": "index.js",
   "scripts": {
-    "build": "ncc build index.js --license licenses.txt"
+    "build": "tsc && ncc build index.ts --license licenses.txt -o dist"
   },
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "openai": "^4.79.4"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.38.3"
+    "@vercel/ncc": "^0.38.3",
+    "typescript": "^4.9.5"
   }
 }
