Debug Code Review Action (#5)
* Add package-lock.json to track dependencies

This commit introduces a package-lock.json file to lock the current dependency versions for the project. It ensures consistency across environments and improves build reliability by preventing unintended updates. Dependencies include runtime and dev tools like @actions/core, @actions/github, and @vercel/ncc.

* Update dependencies to latest versions

Upgraded several dependencies including @actions/github to v6.0.0 and @vercel/ncc to v0.38.3. These updates improve compatibility with newer Node.js requirements (>=18) and resolve various outdated package versions. Ensure your environment meets the updated requirements before usage.

* Refactor main function into modular helper functions

Break down the main function into smaller, reusable helper functions to improve code readability and maintainability. Each helper handles a distinct task, such as fetching branches, generating diffs, or managing PR comments.

* Update OpenAI dependency version to 4.79.4

Upgraded the "openai" package from version 4.1.0 to 4.79.4 in both `package.json` and `package-lock.json`. This ensures compatibility with the latest features and fixes in the library. No changes were made to other dependencies.

* Migrate to TypeScript and update OpenAI client usage

Refactored the GitHub Action to TypeScript, adding a `tsconfig.json` for strict type-checking and generating compiled outputs in the `dist` directory. Updated OpenAI client methods to the latest v4 syntax for compatibility and enhanced error handling. Added TypeScript-specific updates to describe function types and interfaces for clarity.

* Add extra prompt input

* Debug Code Review Action

* Increase stdout buffer size

* Use updated code in action

* Re-build action

* Set latest action version to run

* Add documentation for AI Code Review GitHub Action

---------

Co-authored-by: Eugene Platonov <eugeneplatonoff@gmail.com>

--- a/.github/workflows/code-review.yaml
+++ b/.github/workflows/code-review.yaml
@@ -2,6 +2,27 @@ name: AI Code Review
 
 on:
   workflow_dispatch:
+    inputs:
+      model:
+        type: choice
+        description: "GPT Model"
+        default: gpt-4o-mini
+        options:
+          - gpt-4o-mini
+          - gpt-4o
+          - o1-mini
+          - o1-preview
+        required: true
+      extra_prompt:
+        type: string
+        description: "Extra Prompt"
+        required: false
+        default: ""
+
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
 
 jobs:
   review_job:
@@ -10,4 +31,12 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: '0'
+          fetch-depth: "0"
+
+      - name: Run PR Reviewer Action
+        uses: remedyproduct/gpt-review-action@1bb26f2a6e09665181bb3d2a88b7cd3c58d03cb5
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          openai_token: ${{ secrets.OPENAI_TOKEN }}
+          openai_model: ${{ github.event.inputs.model }}
+          extra_prompt: ${{ github.event.inputs.extra_prompt }}
