--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
 name: "GPT PR Review Action"
 description: "A reusable action that reviews a PR (deduced from GITHUB_REF) and comments with its findings."
+branding:
+  icon: "check-square"
+  color: "blue"
 
 inputs:
   github_token:
